# Pterodactyl

./: .gitignore  Cargo.toml  README.md
docs/: schema.md
examples/: server.rs
locust/: requirements.txt
src/: lib.rs  main.rs
