[package]
name = "pterodactyl"
version = "0.1.0"
authors = ["Tricera Systems <reeceharris@duck.com>"]
description = "A lightweight, scalable REST API framework that takes your applications to new heights with speed and agility."
license = "AGPL-3.0"
homepage = "https://github.com/TriceraSystems/Pterodactyl"
repository = "https://github.com/TriceraSystems/Pterodactyl"
readme = "README.md"
edition = "2021"
exclude = ["/locust"]

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4.3"